# objPad

./: 23.5.0.json  buildVars.py  changes.md  flake8.ini  objPad.xliff  pyproject.toml  readme.md
.github/workflows/: crowdinL10n.yml  fetchTranslationsFromCrowdin.yaml
addon/: installTasks.py
addon/doc/bg/: readme.md
addon/doc/da/: readme.md
addon/doc/de/: readme.md
addon/doc/es/: readme.md
addon/doc/fi/: readme.md
addon/doc/fr/: readme.md
addon/doc/gl/: readme.md
addon/doc/hr/: readme.md
addon/doc/hu/: readme.md
addon/doc/it/: readme.md
addon/doc/pl/: readme.md
addon/doc/pt_BR/: readme.md
addon/doc/pt_PT/: readme.md
addon/doc/ro/: readme.md
addon/doc/ru/: readme.md
addon/doc/sk/: readme.md
addon/doc/tr/: readme.md
addon/doc/uk/: readme.md
addon/doc/zh_CN/: readme.md
addon/globalPlugins/: objPad.py
addon/locale/af_ZA/LC_MESSAGES/: nvda.po
addon/locale/am/LC_MESSAGES/: nvda.po
addon/locale/an/LC_MESSAGES/: nvda.po
addon/locale/ar/LC_MESSAGES/: nvda.po
addon/locale/bg/LC_MESSAGES/: nvda.po
addon/locale/bn/LC_MESSAGES/: nvda.po
addon/locale/bs/LC_MESSAGES/: nvda.po
addon/locale/ca/LC_MESSAGES/: nvda.po
addon/locale/ckb/LC_MESSAGES/: nvda.po
addon/locale/cs/LC_MESSAGES/: nvda.po
addon/locale/da/LC_MESSAGES/: nvda.po
addon/locale/de/LC_MESSAGES/: nvda.po
addon/locale/de_CH/LC_MESSAGES/: nvda.po
addon/locale/el/LC_MESSAGES/: nvda.po
addon/locale/en/LC_MESSAGES/: nvda.po
addon/locale/es/LC_MESSAGES/: nvda.po
addon/locale/es_CO/LC_MESSAGES/: nvda.po
addon/locale/et/LC_MESSAGES/: nvda.po
addon/locale/fa/LC_MESSAGES/: nvda.po
addon/locale/fi/LC_MESSAGES/: nvda.po
addon/locale/fr/LC_MESSAGES/: nvda.po
addon/locale/ga/LC_MESSAGES/: nvda.po
addon/locale/gl/LC_MESSAGES/: nvda.po
addon/locale/he/LC_MESSAGES/: nvda.po
addon/locale/hi/LC_MESSAGES/: nvda.po
addon/locale/hr/LC_MESSAGES/: nvda.po
addon/locale/hu/LC_MESSAGES/: nvda.po
addon/locale/id/LC_MESSAGES/: nvda.po
addon/locale/is/LC_MESSAGES/: nvda.po
addon/locale/it/LC_MESSAGES/: nvda.po
addon/locale/ja/LC_MESSAGES/: nvda.po
addon/locale/ka/LC_MESSAGES/: nvda.po
addon/locale/km/LC_MESSAGES/: nvda.po
addon/locale/kmr/LC_MESSAGES/: nvda.po
addon/locale/kn/LC_MESSAGES/: nvda.po
addon/locale/ko/LC_MESSAGES/: nvda.po
addon/locale/ky/LC_MESSAGES/: nvda.po
addon/locale/lt/LC_MESSAGES/: nvda.po
addon/locale/mk/LC_MESSAGES/: nvda.po
addon/locale/mn/LC_MESSAGES/: nvda.po
addon/locale/my/LC_MESSAGES/: nvda.po
addon/locale/nb_NO/LC_MESSAGES/: nvda.po
addon/locale/ne/LC_MESSAGES/: nvda.po
addon/locale/nl/LC_MESSAGES/: nvda.po
addon/locale/nn_NO/LC_MESSAGES/: nvda.po
addon/locale/pa/LC_MESSAGES/: nvda.po
addon/locale/pl/LC_MESSAGES/: nvda.po
addon/locale/pt_BR/LC_MESSAGES/: nvda.po
addon/locale/pt_PT/LC_MESSAGES/: nvda.po
addon/locale/ro/LC_MESSAGES/: nvda.po
addon/locale/ru/LC_MESSAGES/: nvda.po
addon/locale/sk/LC_MESSAGES/: nvda.po
addon/locale/sl/LC_MESSAGES/: nvda.po
addon/locale/so/LC_MESSAGES/: nvda.po
addon/locale/sq/LC_MESSAGES/: nvda.po
addon/locale/sr/LC_MESSAGES/: nvda.po
addon/locale/sv/LC_MESSAGES/: nvda.po
addon/locale/ta/LC_MESSAGES/: nvda.po
addon/locale/th/LC_MESSAGES/: nvda.po
addon/locale/tr/LC_MESSAGES/: nvda.po
addon/locale/uk/LC_MESSAGES/: nvda.po
addon/locale/ur/LC_MESSAGES/: nvda.po
addon/locale/vi/LC_MESSAGES/: nvda.po
addon/locale/zh_CN/LC_MESSAGES/: nvda.po
addon/locale/zh_HK/LC_MESSAGES/: nvda.po
addon/locale/zh_TW/LC_MESSAGES/: nvda.po
